# handler/response.go
@@ -1,17 +1,47 @@
 ﻿package handler
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/1guilherme1python1/go-api-vagas/schemas"
+	"github.com/gin-gonic/gin"
+)
 
 func sendErrorResponse(ctx *gin.Context, code int, msg string) {
 	ctx.JSON(code, gin.H{
-		"errorCode": code,
-		"msg":       msg,
+		"statusCode": code,
+		"msg":        msg,
 	})
 }
 
-func sendSuccessResponse(ctx *gin.Context, code int, msg interface{}) {
+func SendSuccessResponse(ctx *gin.Context, code int, msg interface{}) {
 	ctx.JSON(code, gin.H{
-		"errorCode": code,
-		"msg":       msg,
+		"statusCode": code,
+		"msg":        msg,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type DeleteOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+type ListOpeningsResponse struct {
+	Message string                    `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
+type UpdateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
